# ai_meal_plan_generator

./: .env.example  .gitignore  README.md  ai_config.py  pyproject.toml  requirements.txt
agents/: macro_review_agent.py  meal_plan.py
ai/: ai_config.py
ai/agents/: budget_review.py  macro_review.py  meal_plan.py  nutrition_review.py
ai/models/: meal_plan.py  requests.py  review.py
ai/state/: user_settings.py
ai/tests/: meal_plan.py
ai/workflows/: meal_plan.py
models/: meal_plan.py  reviews.py
